adds users and address relations
